--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -5,109 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Div Bonita com Botão</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-
-            body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background: linear-gradient(135deg, #f0f8ff, #87cefa);
-            background-size: cover;
-            font-family: Arial, sans-serif;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .container-lg {
-            display:inline-flexbox;
-            justify-content: center;
-            align-items: center;
-            height: 300px;
-            background-color: #f0f8ff;
-            border: 2px solid #87cefa;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 50px auto;
-            padding-top: 20px;
-            max-width: 600px;
-        }
-
-        button {
-            background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 37%, rgba(0,212,255,1) 100%);
-            color: white;
-            border: 50px;
-            border-color: black;
-            padding: 10px 20px;
-            border-radius: 16px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background: rgb(2,0,36);
-            background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 37%, rgba(0,212,255,1) 100%);
-            transform: scale(1.2);
-            transition: transform 0.3s, background-color 0.3s;
-        }
-
-        .title{
-
-            text-align: center;
-
-        }
-
-        .center{
-           
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center 
-        }
-
-        
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
-    </style>
+ 
 </head>
 <body>
 
@@ -131,7 +29,7 @@
                 </div>
 
                 <div class="form-floating center">
-                    <button id="addus" class="opModel">Clique aqui</button>
+                    <button (click)="openModal()" class="btn btn-primary">Clique aqui</button>
                 </div>
                 
             </div>
@@ -160,54 +58,12 @@
 </div>
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
-
-    <!-- Modal content -->
+<div  [id]="modalId" [ngStyle]="{'display': isModalOpen ? 'block' : 'none'}" class="modal" (click)="onBackdropClick($event)">
     <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+        <span (click)="closeModal()" class="close">&times;</span>
+        <p>Este é o conteúdo do modal.</p>
     </div>
-
 </div>
-
-<script>
-
-console.log("teste1123");
-console.log("teste112312312");
-console.log("teste1123123121231231");
-
-    // Get the modal
-    var modal = document.getElementById("myModal");
-    
-    // Get the button that opens the modal
-    var btn = document.getElementById("addus");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-    
-    // When the user clicks the button, open the modal 
-    btn.onclick = function() {
-        console.log("teste1");
-      modal.style.display = "block";
-    }
-    
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() 
-    {
-        console.log("teste2");
-    
-        modal.style.display = "none";
-    }
-    
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-        console.log("teste3");
-
-      }
-    }
-    </script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
