--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Div Bonita com Botão</title>
+    <title>Admin US's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  
 </head>
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="form-floating center">
-                    <button (click)="openModal()" class="btn btn-primary">Clique aqui</button>
+                    <button (click)="openModal()" class="btn btnBl btn-primary">Clique aqui</button>
                 </div>
                 
             </div>
@@ -48,7 +48,7 @@
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="form-floating mb-3 ">
-                    <button onclick="alert('Botão clicado!')">Clique aqui</button>
+                    <button class="btnBl" onclick="alert('Botão clicado!')">Clique aqui</button>
                 </div>
             </div>
         </div>
@@ -58,10 +58,95 @@
 </div>
 
 <!-- The Modal -->
-<div  [id]="modalId" [ngStyle]="{'display': isModalOpen ? 'block' : 'none'}" class="modal" (click)="onBackdropClick($event)">
+ <!-- (click)="onBackdropClick($event)" -->
+<div  [id]="modalId" [ngStyle]="{'display': isModalOpen ? 'block' : 'none'}" class="modal" >
     <div class="modal-content">
         <span (click)="closeModal()" class="close">&times;</span>
-        <p>Este é o conteúdo do modal.</p>
+        <div>
+
+        <form  [formGroup]="myForm" (ngSubmit)="onSubmit()" class="row g-3 needs-validation" novalidate="">
+            <div class="col-md-4">
+              <label for="validationCustom01" class="form-label">Name</label>
+              <input type="text" class="form-control" id="validationCustom01" placeHolder="Name" required="">
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+            <div class="col-md-4">
+              <label for="validationCustom02" class="form-label">Date of Birth</label>
+              <input type="date" class="form-control" id="validationCustom02" required="">
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+            <div class="col-md-4">
+              <label for="validationCustomUsername" class="form-label">Username</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
+                <div class="invalid-feedback">
+                  Please choose a username.
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <label for="validationCustom03" class="form-label">City</label>
+              <input type="text" class="form-control" id="validationCustom03" required="">
+              <div class="invalid-feedback">
+                Please provide a valid city.
+              </div>
+            </div>
+            <div class="col-md-3">
+              <label for="validationCustom04" class="form-label">Gender</label>
+              <select class="form-select" id="validationCustom04" required="">
+                <option selected="" disabled="" value="">Choose...</option>
+                <option>Male</option>
+                <option>Female</option>
+              </select>
+              <div class="invalid-feedback">
+                Please select a valid state.
+              </div>
+            </div>
+            <div class="col-md-3">
+              <label for="validationCustom05" class="form-label">Zip</label>
+              <input type="text" class="form-control" id="validationCustom05" required="">
+              <div class="invalid-feedback">
+                Please provide a valid zip.
+              </div>
+            </div>
+            <div class="col-md-6">
+                <div class="tags-input">
+                    <!--<span class="input-group-text" id="inputGroupPrepend">&#64;</span>-->
+                    <ul id="tags">
+                        <li *ngFor="let tag of tags; let i = index" class="tag">
+                            {{ tag }}
+                            <button class="delete-button" (click)="removeTag(i)">X</button>
+                          </li>
+                    </ul>
+                    <input type="text" id="input-tag" 
+                    formControlName="inputTag"
+                    (keydown)="addTag($event)" 
+                        placeholder="Enter tag name" />
+                </div>
+              </div>
+
+            <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required="">
+                <label class="form-check-label" for="invalidCheck">
+                  Agree to terms and conditions
+                </label>
+                <div class="invalid-feedback">
+                  You must agree before submitting.
+                </div>
+              </div>
+            </div>
+            <!--<div class="col-12">
+              <button class="btn btn-primary" type="submit">Submit form</button>
+            </div>-->
+          </form>
+        </div>
+
     </div>
 </div>
 
