--- a/angular-three/src/app/pages/Patient/patient/patient.component.scss
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.scss
@@ -24,7 +24,7 @@ body {
   max-width: 600px;
 }
 
-button {
+.btnBl {
   background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 37%, rgba(0,212,255,1) 100%);
   color: white;
   border: 50px;
@@ -36,7 +36,7 @@ button {
   transition: background-color 0.3s;
 }
 
-button:hover {
+.btnBl:hover {
   background: rgb(2,0,36);
   background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 37%, rgba(0,212,255,1) 100%);
   transform: scale(1.2);
@@ -50,12 +50,12 @@ button:hover {
 }
 
 .center{
- 
+
   margin-left: auto;
   margin-right: auto;
   display: flex;
   align-items: center;
-  justify-content: center 
+  justify-content: center
 }
 
 
@@ -97,3 +97,59 @@ color: #000;
 text-decoration: none;
 cursor: pointer;
 }
+
+
+
+.is-invalid {
+  border-color: #dc3545;
+}
+.is-valid {
+  border-color: #28a745;
+}
+
+.tags-input {
+  display: inline-block;
+  position: relative;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px;
+  box-shadow: 2px 2px 5px #00000033;
+  width: 100%;
+}
+
+.tags-input ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.tags-input li {
+  display: inline-block;
+  background-color: #f2f2f2;
+  color: #333;
+  border-radius: 20px;
+  padding: 5px 10px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+
+.tags-input input[type="text"] {
+  border: none;
+  outline: none;
+  padding: 5px;
+  width:100%;
+  font-size: 14px;
+}
+
+.tags-input input[type="text"]:focus {
+  outline: none;
+}
+
+.tags-input .delete-button {
+  background-color: transparent;
+  border: none;
+  color: #999;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
