--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient US's</title>
+    <title>PAtient US's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
@@ -11,46 +11,24 @@
 
     <div class="container-xxl">
 
-        <h1 class="h1 title" style="padding: 1cm"> Patient </h1>
-
+        <h1 class="h1 title glow" style="padding: 1cm; color:white"> Patient </h1>
+        <!--TODO: Alterar o formato de como esta a organização/divisão das divs par aficar de forma mas dinamica-->
         <div class="row row-cols-3">
-            <div class="container-lg col">
+            <div class="container-lg col selectionDiv" (click)="openModal()">
                 <div class="form-floating mb-3">
-                    <h3 class="title" >Register</h3>
-                </div>
-
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="username">
-                    <label for="floatingInput">Username</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
-                </div>
-
-                <div class="form-floating center">
-                    <button (click)="openModal()" class="btn btnBl btn-primary">Clique aqui</button>
+                    <h3 class="title" >Update Patient Profile</h3>
                 </div>
 
             </div>
 
-            <div class="container-lg col">
-                <div class="form-floating mb-3">
-                    <h3 class="title" >Add User</h3>
-                </div>
+            <div class="container-lg col selectionDiv" (click)="openModal()">
+              <div class="form-floating mb-3">
+                  <h3 class="title" >Delete Patient Profile</h3>
+              </div>
 
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput2" placeholder="username">
-                    <label for="floatingInput">Username</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="floatingPassword2" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
-                </div>
-                <div class="form-floating mb-3 ">
-                    <button class="btnBl" onclick="alert('Botão clicado!')">Clique aqui</button>
-                </div>
-            </div>
+          </div>
+
+
         </div>
 
 
@@ -66,6 +44,13 @@
 
         <form  [formGroup]="myForm" (ngSubmit)="onSubmit()" class="row g-3 needs-validation" novalidate="">
             <div class="col-md-4">
+              <label for="validationCustom01" class="form-label">Id</label>
+              <input type="text" class="form-control" id="validationCustom01" placeHolder="Id" required="">
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+            <div class="col-md-4">
               <label for="validationCustom01" class="form-label">Name</label>
               <input type="text" class="form-control" id="validationCustom01" placeHolder="Name" required="">
               <div class="valid-feedback">
@@ -80,22 +65,34 @@
               </div>
             </div>
             <div class="col-md-4">
-              <label for="validationCustomUsername" class="form-label">Username</label>
+              <label for="validationCustom02" class="form-label">Medical Record Number</label>
+              <!--oninput="this.value = this.value.slice(0, 9)"-->
+              <input type="number" class="form-control" id="validationCustom02" min="202400000000" max="203000000000" >
+              <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback" id="invalid-feedback">Please enter a valid Medical Record Number.</div>
+          </div>
+
+
+            <div class="col-md-4">
+              <label for="validationCustomUsername" class="form-label">Email</label>
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
                 <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
                 <div class="invalid-feedback">
-                  Please choose a username.
+                  Please choose a email.
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <label for="validationCustom03" class="form-label">City</label>
-              <input type="text" class="form-control" id="validationCustom03" required="">
-              <div class="invalid-feedback">
-                Please provide a valid city.
+            <div class="col-md-4">
+              <label for="validationCustom02" class="form-label">Phone</label>
+              <!--oninput="this.value = this.value.slice(0, 9)"-->
+              <input type="number" class="form-control" id="validationCustom02" min="0" max="999999999" >
+              <div class="valid-feedback">
+                Looks good!
               </div>
             </div>
+            <div class="col-md-4"></div>
+
             <div class="col-md-3">
               <label for="validationCustom04" class="form-label">Gender</label>
               <select class="form-select" id="validationCustom04" required="">
@@ -107,14 +104,8 @@
                 Please select a valid state.
               </div>
             </div>
-            <div class="col-md-3">
-              <label for="validationCustom05" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="validationCustom05" required="">
-              <div class="invalid-feedback">
-                Please provide a valid zip.
-              </div>
-            </div>
             <div class="col-md-6">
+              <label for="validationCustom06" class="form-label">Allergies</label>
                 <div class="tags-input">
                     <!--<span class="input-group-text" id="inputGroupPrepend">&#64;</span>-->
                     <ul id="tags">
@@ -126,9 +117,42 @@
                     <input type="text" id="input-tag"
                     formControlName="inputTag"
                     (keydown)="addTag($event)"
-                        placeholder="Enter tag name" />
+                        placeholder="Enter allergies name" />
                 </div>
               </div>
+
+
+              <h5 style="margin-top:1cm" for="validationCustomUsername" class="form-label">Emergency Contact</h5>
+
+
+            <div class="col-md-4">
+              <label for="validationCustomUsername" class="form-label">Name</label>
+              <div class="input-group has-validation">
+                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <label for="validationCustomUsername" class="form-label">Email</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
+                <div class="invalid-feedback">
+                  Please choose a email.
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <label for="validationCustom02" class="form-label">Phone</label>
+              <!--oninput="this.value = this.value.slice(0, 9)"-->
+              <input type="number" class="form-control" id="validationCustom02" min="0" max="999999999" >
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
 
             <div class="col-12">
               <div class="form-check">
