--- a/angular-three/src/app/pages/Patient/patient/patient.component.scss
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.scss
@@ -16,7 +16,7 @@ body {
   align-items: center;
   height: 300px;
   background-color: #f0f8ff;
-  border: 2px solid #87cefa;
+  border: 2px solid #0e79a3;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 50px auto;
@@ -41,6 +41,28 @@ body {
   background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 37%, rgba(0,212,255,1) 100%);
   transform: scale(1.2);
   transition: transform 0.3s, background-color 0.3s;
+}
+
+.selectionDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  opacity: 80%;
+  background: rgb(185,243,252);
+  background: linear-gradient(180deg, rgba(185,243,252,1) 0%, rgba(147,198,231,1) 45%, rgba(120,157,188,1) 87%);
+}
+
+.selectionDiv .title{
+  font-size: 45px;
+  color: #FEF9F2;
+}
+
+.selectionDiv:hover{
+  transform: scale(1.2);
+  transition: transform 0.5s, background-color 0.5s;
+  opacity: 100%;
+
 }
 
 .title{
@@ -81,6 +103,8 @@ margin: auto;
 padding: 20px;
 border: 1px solid #888;
 width: 80%;
+border-radius: 18px;
+
 }
 
 /* The Close Button */
@@ -153,3 +177,25 @@ cursor: pointer;
   margin-left: 5px;
 }
 
+
+
+.glow{
+  text-align: center;
+  -webkit-animation: glow 2s ease-in-out infinite alternate;
+  -moz-animation: glow 2s ease-in-out infinite alternate;
+  animation: glow 2s ease-in-out infinite alternate;
+  text-shadow: 1.5px 1.5px 1px black;
+
+}
+
+
+@-webkit-keyframes glow {
+  from {
+      text-shadow: 0 0 5px #eeeeee, 0 0 10px rgba(0,230,255,1), 0 0 15px rgba(0,230,255,1), 0 0 20px rgba(0,230,255,1),
+                   0 0 30px rgba(9,67,121,1), 0 0 30px rgba(9,67,121,1), 0 0 40px rgba(9,67,121,1);
+    }
+    to {
+      text-shadow: 0 0 5px #eeeeee, 0 0 10px #0B135B, 0 0 15px #0B135B, 0 0 20px #0B135B,
+                   0 0 20px #0B135B, 0 0 30px #0B135B, 0 0 40px #0B135B;
+    }
+}
