--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -316,7 +316,7 @@
             <div class="table-wrapper" >
               <div class="table-title">
               <form [formGroup]="staffForm" (ngSubmit)="onSubmitStaff()" class="row g-3 needs-validation" novalidate="">
-              <table class="table table-striped table-hover" >
+              <table class="table table-striped table-hover" style="display: block; height: 50vh; overflow-y: scroll;" >
                 <thead>
                   <tr>
                     <tr>
@@ -358,7 +358,7 @@
 
           <div class="col-md-9"></div>
           <div class="col-md-3">
-            <button class="fs-5 btn btn-outline-info">View <i class="bi bi-info-square-fill"></i></button>
+            <button class="fs-5 btn btn-outline-info" (click)="viewStaff()">View <i class="bi bi-info-square-fill"></i></button>
             <button class="fs-5 btn btn-outline-warning">Edit <i class="bi bi-pencil-square"></i></button>
             <button class="fs-5 btn btn-outline-danger" (click)="deactivateStaff()">Deactivate <i class="bi bi-archive-fill"></i></button>
           </div>
