--- a/angular-three/src/app/pages/Admin/admin/admin.component.scss
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.scss
@@ -278,3 +278,63 @@ table.table td .btn.manage:hover {
     height: 50vh; 
     overflow-y: scroll;
 }
+
+
+
+.dates-input {
+    margin-top: 10px;
+  }
+  
+  .dates-input ul#dates {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+  }
+  
+  .dates-input ul#dates li.date {
+    background-color: #e0f7fa;
+    color: #00796b;
+    border-radius: 5px;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+  
+  .dates-input ul#dates li.date .delete-button {
+    background: none;
+    border: none;
+    color: #f44336;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-left: 8px;
+    cursor: pointer;
+  }
+  
+  .dates-input ul#dates li.date .delete-button:hover {
+    color: #d32f2f;
+  }
+  
+  .dates-input input[type="date"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    font-size: 0.9rem;
+    color: #495057;
+  }
+  
+  .dates-input input[type="date"]::placeholder {
+    color: #6c757d;
+  }
+  
+  .dates-input input[type="date"]:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  }
+  
